:bug: Fix the white space bug in docs Fix only the visual rendering the issue for selection of text still remains and have to be solved by updating the html generator Closes #3208

--- a/docs/_static/theme_overrides.css
+++ b/docs/_static/theme_overrides.css
@@ -40,3 +40,7 @@ a:hover {
 .logo {
   width: 240px !important;
 }
+
+a.internal::after{
+  content: ' ';
+}
